Fixed alignment error

--- a/src/Pages/Desktop/AppStore/AppStore.css
+++ b/src/Pages/Desktop/AppStore/AppStore.css
@@ -1,4 +1,5 @@
 .appStore {
+    position: relative;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -13,7 +14,7 @@
     border-right: 1px solid black;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    /* height: 100%; */
     border-radius: 5px 0 0 5px;
     padding: 2rem;
 }
@@ -44,7 +45,7 @@
     flex: 1;
     background-color: #2F211E;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     border-radius: 0 5px 5px 0;
     overflow: scroll;
     overflow-x: hidden;
